# wikiwho_rust

./: .gitignore  ALGORITHM.md  API.md  CLAUDE.md  Cargo.toml  DEPLOY.md  PLAN.md  README.md  STORAGE.md
.claude/: settings.json
crates/wikiwho-attribute/: Cargo.toml
crates/wikiwho-attribute/src/: cascade.rs  diff.rs  differ.rs  lib.rs  pipeline.rs  response.rs  spam.rs  structures.rs  tokenize.rs  whocolor.rs
crates/wikiwho-attribute/tests/: differ_python_parity.rs  response_against_fixture.rs
crates/wikiwho-ingest/: Cargo.toml
crates/wikiwho-ingest/src/: apply.rs  checkpoint.rs  config.rs  events.rs  lib.rs
crates/wikiwho-ingest/tests/: apply_end_to_end.rs
crates/wikiwho-mwclient/: Cargo.toml
crates/wikiwho-mwclient/src/: info.rs  lib.rs  revisions.rs  users.rs
crates/wikiwho-mwclient/tests/: parse_page_info.rs  parse_revision.rs  parse_users.rs  users_and_parsoid_mock.rs
crates/wikiwho-parity/: Cargo.toml
crates/wikiwho-parity/src/: main.rs
crates/wikiwho-server/: Cargo.toml
crates/wikiwho-server/src/: cache_miss.rs  error.rs  index.rs  lib.rs  params.rs  routes.rs  state.rs  whocolor_html.rs  whocolor_template_strip.rs  whocolor_wikitext.rs
crates/wikiwho-server/src/handlers/: health.rs  mod.rs  rev_content.rs  whocolor.rs
crates/wikiwho-server/tests/: cache_miss.rs  icaro_repro.rs  rev_content_round_trip.rs  whocolor.rs
crates/wikiwho-storage/: Cargo.toml
crates/wikiwho-storage/src/: codec.rs  hashtables.rs  layout.rs  lib.rs  meta.rs  paragraphs.rs  reader.rs  rebuild.rs  rev_id_index.rs  revisions.rs  sentences.rs  strings.rs  tokens.rs  writer.rs
crates/wikiwho-storage/tests/: round_trip_history.rs
deployment/: nginx-site.conf  redeploy.sh  wikiwho-rs-ingest.service  wikiwho-rs-server.service  wmcloud_setup.sh
notes/: 2026-05-22-cascade.md  2026-05-22-first-parity-ratchet.md  2026-05-22-framework-setup.md  2026-05-22-full-history-parity.md  2026-05-22-myers-diff.md  2026-05-22-structures-and-spam.md  2026-05-22-tokenizer-port.md  2026-05-23-cache-miss.md  2026-05-23-differ-port.md  2026-05-23-endpoint1-and-real-mw.md  2026-05-23-formatversion-bug.md  2026-05-23-ingest-scaffold.md  2026-05-23-mwclient-and-broader-corpus.md  2026-05-23-parity-bot-non-en-and-covid.md  2026-05-23-photosynthesis-signal.md  2026-05-23-python-replay.md  2026-05-23-resume-from-disk.md  2026-05-23-rev-id-index.md  2026-05-23-server-scaffold.md  2026-05-23-storage-scaffold.md  2026-05-23-whocolor-parity.md  2026-05-23-whocolor-python-replay.md  2026-05-23-whocolor.md  2026-05-24-first-deploy-and-whocolor-parity.md  2026-05-24-icaro-template-bleed-not-our-bug.md  2026-05-24-wmcloud-deploy-prep.md  2026-05-25-storage-compression.md  README.md  decisions-needed.md  diff-algorithm-revisit.md  parity-corpus-wishlist.md
notes/cutover/: 01-wmcloud-deploy.md
scripts/: bench_articleviewer.py  cache_wikitext.py  capture_fixtures.py  capture_history.py  icaro_compare_prod.py  icaro_run_python.py  icaro_trace.py  icaro_trace_python.py  inspect_origins.py  inspect_revs.py  python_replay.py  remote-deploy.sh  verify_differ.py  verify_tokenizer.py
