[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
edition = "2024"
rust-version = "1.85"
version = "0.0.0"
license = "MIT"
publish = false

# Shared deps so crates pin to the same versions. Add here, reference in
# member Cargo.toml as `dep = { workspace = true }`.
[workspace.dependencies]
md-5 = "0.10"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
anyhow = "1"
thiserror = "2"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "gzip", "brotli", "stream"] }
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "time", "sync"] }
