[package]
name = "wikiwho-mwclient"
edition.workspace = true
rust-version.workspace = true
version.workspace = true
license.workspace = true
publish.workspace = true
description = "MediaWiki Action API + Wikipedia REST client used by wikiwho-server (cache-miss fetches) and wikiwho-ingest (catch-up gaps)."

[dependencies]
anyhow = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
urlencoding = "2"

[dev-dependencies]
axum = "0.8"

[[bin]]
name = "capture-history"
path = "src/bin/capture_history.rs"
